del underline in burger

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -75,7 +75,7 @@
     }
 
     &__item:hover {
-      transform: scale(1);
+      text-decoration: none;
       box-shadow: 0 1px 10px $color-green;
     }
 
