--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -34,7 +34,7 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 150%;
-    color: $green-color;
+    color: $main-color;
   }
 
   &__title {
@@ -50,7 +50,7 @@
       width: 15px;
       height: 15px;
       margin: 0 0 2px 24px;
-      background-color: $orange-color;
+      background-color: $main-invers-color;
     }
   }
 
@@ -73,9 +73,7 @@
   }
 
   @media (max-width: 1279px) {
-    & {
-      height: 720px;
-    }
+    height: 720px;
 
     &__content {
       margin-top: 30px;
@@ -83,10 +81,8 @@
   }
 
   @media (max-width: $medium-screen) {
-    & {
-      height: auto;
-      margin-bottom: 30px;
-    }
+    height: auto;
+    margin-bottom: 30px;
 
     &__image {
       width: 100%;
@@ -110,9 +106,7 @@
   }
 
   @media (max-width: $small-screen) {
-    & {
-      margin-bottom: 40px;
-    }
+    margin-bottom: 40px;
 
     &__image {
       height: 210px;
