--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -5,7 +5,7 @@
   width: 570px;
   padding: 45px 100px 50px;
   border-bottom: 1px solid $grey-color;
-  background-color: $white-color;
+  background-color: #fff;
   transform: translate(-50%, -50%);
 
   &__data {
@@ -28,7 +28,7 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 150%;
-    color: $green-color;
+    color: $main-color;
   }
 
   &__title {
