--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -37,12 +37,12 @@
     }
   }
 
-  &__title-hover {
+  &__title--hover {
     transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.2);
-      color: $green-color;
+      color: $main-color;
     }
   }
 
@@ -76,7 +76,7 @@
     width: 1px;
     height: 260px;
     margin: 0 10%;
-    background: $green-color;
+    background: $main-color;
   }
 
   &__nav {
