--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -8,7 +8,7 @@
     padding: 27px 35px;
     font-size: 14px;
     line-height: 100%;
-    color: $black-color;
+    color: #000;
   
     &::placeholder {
       font-size: 14px;
