--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -8,7 +8,7 @@
   &__list {
     display: flex;
     justify-content: center;
-    background-color: $c-gray;
+    background-color: $base-color;
     opacity: 0.8;
   }
 
@@ -27,7 +27,7 @@
     line-height: 40px;
     font-weight: 550;
     transition: transform 0.3s;
-    color: $green-color;
+    color: $main-color;
   }
 
   &__toggler-label {
@@ -35,7 +35,7 @@
     margin: 35px;
     width: 20px;
     height: 20px;
-    color: $black-color;
+    color: #000;
     cursor: pointer;
 
     &::before {
@@ -50,7 +50,7 @@
   &__toggler:checked ~ .header__list {
     margin: 0;
     width: 300px;
-    background-color: $c-gray;
+    background-color: $base-color;
     border-radius: 8px;
     opacity: 0.8;
   }
@@ -86,7 +86,7 @@
 
     &__toggler:not(:checked) ~ &__list {
       width: 300px;
-      background-color: $white-color;
+      background-color: #fff;
       border-radius: 8px;
       opacity: 0.8;
       transition: transform 0.5s;
