--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -2,21 +2,21 @@
   width: 70px;
   height: 70px;
   background-image: center no-repeat url(../images/arrow.png);
-  background-color: $green-color;
+  background-color: $main-color;
   transition: transform 0.3s;
 
   &:hover {
-    background-color: $orange-color;
+    background-color: $main-invers-color;
     border: 2px solid #1a5a4c;
     transform: translateX(15px) rotate(15deg) translateY(10px);
   }
 
   &__inverse {
     background: center no-repeat url(../images/blackArrow.png);
-    background-color: $orange-color;
+    background-color: $main-invers-color;
 
     &:hover {
-      background-color: $green-color;
+      background-color: $main-color;
       border: 2px solid black;
     }
   }
