--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,14 +1,12 @@
 $text-font: ibm plex sans, sans-serif;
 $title-font: montserrat, sans-serif;
 
-$c-gray: #eee;
-$title-color: #0f0e08;
-$white-color: #fff;
-$black-color: #000;
-$green-color: #1a5a4c;
-$orange-color: #f14a27;
+$base-color: #eee;
+$main-color: #1a5a4c;
+$main-invers-color: #f14a27;
 $grey-color: #687480;
 $text-color: #4e4e4e;
+$title-color: #0f0e08;
 
 $small-screen: 320px;
 $medium-screen: 768px;
