initial version of museum site NAMU

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,26 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+
+@import "components/header";
+@import "components/container";
+@import "components/logo";
+
+@import "components/event";
+@import "components/main";
+
+@import "components/lecture";
+
+@import "components/gallery";
+@import "components/subscribe";
+
+@import "components/footer";
+@import "components/nav";
+@import "components/public";
+@import "components/schedule";
 
 body {
-  background: $c-gray;
+  background: $c-white;
+  height: 100%;
 }
