--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,10 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: "Roboto";
+//   src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
+// font-family: "IBM Plex Sans", sans-serif;
+// font-family: "Montserrat", sans-serif;
+// font-family: "Oswald", sans-serif;
