--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "header";
+@import "reset";
+@import "burger";
+@import "cutaway";
+@import "container";
+@import "current";
+@import "lection";
+@import "gallery";
+@import "sub";
