raw version for larger screens

--- a/src/styles/components/_contacts.scss
+++ b/src/styles/components/_contacts.scss
@@ -1,4 +1,4 @@
-.schedule {
+.contacts {
   display: flex;
   flex-direction: column;
 
@@ -7,18 +7,12 @@
   line-height: 1.5;
   font-weight: 400;
 
+
   &__heading {
     margin-bottom: 20px;
-    line-height: 1.4;
   }
 
-  &__time {
-    &--bold {
-      font-weight: 600;
-    }
-  }
-
-  &__info {
-    margin-top: 20px;
+  &__link {
+    color: #0f0e08;
   }
 }
