--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -1,13 +1,14 @@
 .event {
-  $redBoxSize: 15px;
-
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 130px;
 
   &__info {
     width: 370px;
+
+    &--gap {
+      margin: 0 130px;
+    }
   }
 
   &__type,
@@ -35,7 +36,7 @@
     color: #0f0e08;
     padding: 30px 0 15px;
 
-    &::after {
+    &--red-box::after {
       content: "";
       position: absolute;
       width: $redBoxSize;
