--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -22,7 +22,10 @@
     }
 
     &--left {
-      display: flex;
+      display: grid;
+      grid-gap: 138px;
+      grid-template-columns: repeat(3, auto);
+      justify-content: start;
     }
 
     &--right {
@@ -32,23 +35,24 @@
 
   &__logo {
     margin-bottom: 63px;
-    margin-right: 138px;
   }
 
-  &__online-contact {
-    margin-bottom: 197px;
-  }
-
-  &__schedule {
-    margin-right: 138px;
-  }
-
-  &__copyright {
+  &__copyright,
+  &__designed {
+    position: absolute;
     font-size: 12px;
     line-height: 1.4;
     font-weight: 300;
     font-family: "IBM Plex Sans", sans-serif;
     color: #0f0e08;
+    bottom: 34px;
   }
 
+  &__copyright {
+    left: $containerPadding;
+  }
+
+  &__designed {
+    right: $containerPadding;
+  }
 }
