--- a/src/styles/components/_lecture.scss
+++ b/src/styles/components/_lecture.scss
@@ -1,25 +1,36 @@
 .lecture {
-  $lectureWidth: 540px;
-  $lectureHeight: 204px;
-  margin-bottom: 216px;
+  position: absolute;
+  left: calc(50% - #{$lectureWidth / 2});
+  bottom: - $lectureHeight / 2;
+  width: $lectureWidth;
+  height: $lectureHeight;
+  background: #fff;
+  box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+  padding-top: 45px;
+  padding-left: 100px;
 
-  position: relative;
-  height: 674px;
-  width: 1920px;
-  background-image: url("../images/hero2.png");
+  &__text {
+    font-size: 14px;
+    line-height: 1;
+    font-weight: 500;
+    font-family: "IBM Plex Sans", sans-serif;
+    color: #687480;
+  }
 
-  &__current {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    left: calc(50% - #{$lectureWidth / 2});
-    bottom: - $lectureHeight / 2;
-    width: $lectureWidth;
-    height: $lectureHeight;
-    background: #fff;
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+  &__date {
+    margin-left: 145px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #1a5a4c;
+  }
+
+  &__title {
+    position: relative;
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    line-height: 1;
+    font-weight: 400;
+    color: #0f0e08;
+    padding-top: 16px;
   }
 }
