--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,27 +1,31 @@
 .main {
-  &--gap {
-    margin-bottom: 100px;
+  &__events {
+    display: grid;
+    grid-row-gap: 60px;
+
+    &--gap {
+      margin-bottom: 100px;
+    }
   }
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__current-header {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 1;
-    color: #0f0e08;
-    margin-bottom: 60px;
-  }
-
-  &__event--first {
-    margin-bottom: 60px;
-  }
-
-  &__event--last {
+  &__event--reverse {
     justify-content: flex-end;
+  }
+
+  &__lecture {
+    position: relative;
+    height: 674px;
+    width: 1920px;
+    background-image: url("../images/hero2.png");
+
+    &--gap {
+      margin-bottom: 216px;
+    }
+  }
+
+  &__gallery {
+    &--gap {
+      margin-bottom: 100px;
+    }
   }
 }
