--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "components/header";
 @import "components/container";
 @import "components/logo";
+@import "components/button";
 
 @import "components/event";
 @import "components/main";
@@ -16,9 +17,10 @@
 @import "components/subscribe";
 
 @import "components/footer";
-@import "components/nav";
 @import "components/public";
 @import "components/schedule";
+@import "components/contacts";
+@import "components/nav";
 
 body {
   background: $c-white;
