--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,3 +3,12 @@ $c-white: #fff;
 
 $logoWidth: 68px;
 $logoHeight: 72px;
+
+$containerPadding: 175px;
+
+$btn-size: 70px;
+
+$lectureWidth: 540px;
+$lectureHeight: 204px;
+
+$redBoxSize: 15px;
