--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -59,19 +59,12 @@
     border: 1px solid #1a5a4c;
     text-transform: uppercase;
     font-family: "IBM Plex Sans", sans-serif;
+    position: relative;
+  }
 
-    &::after {
-      position: absolute;
-      right: -48%;
-      content: ">";
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 70px;
-      width: 70px;
-      color: #fff;
-      background: #1a5a4c;
-    }
+  &__button {
+    position: absolute;
+    left: 100%;
   }
 
   &__events {
