--- a/src/styles/components/_subscribe.scss
+++ b/src/styles/components/_subscribe.scss
@@ -40,7 +40,7 @@
   &__input {
     width: 470px;
     height: 70px;
-    margin-right: 30px;
+
     padding-left: 35px;
     color: #687480;
     font-size: 14px;
@@ -50,12 +50,7 @@
   }
 
   &__button {
-    background: #f14a27;
-    width: 70px;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #000;
+    margin-left: 30px;
+    background-color: #f14a27;
   }
 }
