--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,7 +1,7 @@
 .button {
   height: $btn-size;
   width: $btn-size;
-  background: url('../images/svg/btn-arrow.svg') 50% no-repeat;
+  background: url("../images/svg/btn-arrow.svg") 50% no-repeat;
   background-color: #1a5a4c;
 
   &--red {
