--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,18 @@
 @import "typography";
 
 body {
-  background: $c-gray;
+  margin: 0;
+  background-color: #e5e5e5;
+}
+
+.header {
+  display: flex;
+
+  &__leftside {
+    display: block;
+  }
+
+  &__name {
+    font-family: "Montserrat", sans-serif;
+  }
 }
