--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -108,8 +108,7 @@
       transition: width 0.3s ease 0s, opacity 0.3s ease 0s;
     }
 
-    &:hover::after,
-    &:active::after {
+    &:hover::after {
       width: 100%;
       opacity: 1;
     }
