--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
+@import "reset";
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "../fonts";
+@import "header";
+@import "page";
 
 body {
-  background: $c-gray;
+  background: #fff;
 }
