--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "reset";
+@import "_variables";
+@import "Promo";
 
-body {
-  background: $c-gray;
+.actual__title {
+  font-family: $titleFont;
+  font-size: 48px;
+  font-weight: 700;
+  margin-top: 100px;
+  margin-left: 55px;
+}
+
+.actual__container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(2, 520px);
+
+}
+
+.actual__picture {
+  width: 100%;
+  padding-left: 55px;
+}
+
+.actual__card {
+  width: 100%;
+  margin-top: 50px;
+  margin-left: 65px;
 }
