try yo save deploy

--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,7 +1,11 @@
 .container {
   position: relative;
-  width: 1280px;
+  // width: 1280px;
   // width: 100%;
   margin: 0 auto;
   padding: 0 55px;
+
+  @media screen and (max-width: 770px) {
+    width: 100%;
+  }
 }
