--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,11 +3,10 @@
   display: flex;
   padding-top: 50px;
   padding-left: 55px;
-  margin-bottom: 100px;
+  margin: 0 auto 100px;
 
   width: 1280px;
   height: 457px;
-  // border: 1px solid red;
 
   &__logos {
     &-logo {
