--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -11,3 +11,12 @@ li {
 * {
   box-sizing: border-box;
 }
+
+body {
+  margin: 0 auto;
+  max-width: 1920px;
+
+  @media screen and (min-width: 900px) {
+    // max-width: 1400px;
+  }
+}
