--- a/src/styles/current.scss
+++ b/src/styles/current.scss
@@ -1,11 +1,17 @@
 .current {
-  margin-bottom: 100px;
+  margin: 0 auto 100px;
+  max-width: 1280px;
+  padding: 0 55px;
 
   &__event {
     font-weight: bold;
     font-size: 48px;
     font-family: "Montserrat", sans-serif;
     margin: 100px 0 60px;
+
+    @media screen and (max-width: 770px) {
+      text-align: center;
+    }
   }
 
   &__block {
