--- a/src/styles/cutaway.scss
+++ b/src/styles/cutaway.scss
@@ -2,6 +2,10 @@
   width: 100%;
   height: 565px;
 
+  @media screen and (max-width: 770px) {
+    height: 384px;
+  }
+
   &__image {
     position: absolute;
     display: block;
@@ -9,12 +13,19 @@
 
     right: 0;
     width: 65%;
-    height: 655px;
+    height: 13%;
 
     background-size: cover;
+    background-position: center bottom;
 
     background-repeat: no-repeat;
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg);
+
+    @media screen and (max-width: 770px) {
+      width: 502px;
+      height: 384px;
+      // background-size: contain;
+    }
 
     &-name {
       position: absolute;
@@ -28,11 +39,81 @@
       font-size: 72px;
       line-height: 100%;
       color: #000;
+
+      @media screen and (max-width: 770px) {
+        font-size: 55px;
+        left: -230px;
+      }
     }
 
     &-transparent {
       color: transparent;
       -webkit-text-stroke: 1px #000;
+    }
+  }
+
+  &__ticket {
+    display: flex;
+    position: relative;
+    top: 420px;
+    left: -280px;
+    width: 230px;
+    height: 70px;
+    box-sizing: border-box;
+
+    @media screen and (max-width: 770px) {
+      left: -230px;
+    }
+
+    &-text {
+      // display: inline-block;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      text-align: center;
+      line-height: 70px;
+      color: #0f0e08;
+      border: 1px solid #1a5a4c;
+      width: 150px;
+      height: 70px;
+    }
+
+    &-button {
+      // display: inline-block;
+      width: 70px;
+      height: 70px;
+      background: url(../images/Vector.svg) no-repeat center;
+      background-color: #1a5a4c;
+    }
+  }
+
+  &__decor {
+    position: absolute;
+    top: 500px;
+    left: -600px;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #687480;
+    transform: rotate(-90deg);
+
+    &::before {
+      position: relative;
+      display: block;
+      top: 8px;
+      right: 90px;
+      content: "";
+      width: 70px;
+      height: 1px;
+      background: #1a5a4c;
+    }
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .cutaway {
+    &__image {
+      width: 502px;
     }
   }
 }
