--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -2,7 +2,8 @@
   position: relative;
 
   margin-bottom: 200px;
-  background-image: url(../images/Rectangle-20.svg);
+  background: url(../images/Rectangle-20.svg) no-repeat center;
+  background-size: cover;
   width: 100%;
   height: 550px;
 
