--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,140 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/placeholders";
+@import "header";
 
 body {
   margin: 0;
-  background-color: #e5e5e5;
+  background-color: #fff;
 }
 
-.header {
-  display: flex;
+.main {
+  padding: 0 55px;
+}
 
-  &__leftside {
+.event {
+
+  &__heading {
+    @extend %font-M700;
+    font-size: 48px;
+    color: #0f0e08;
+    padding: 30px 0;
     display: block;
   }
 
-  &__name {
-    font-family: "Montserrat", sans-serif;
+  &__event1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+  }
+
+  &__left1 {
+    width: 670px;
+    height: 520px;
+  }
+
+  &__image1 {
+    object-fit: contain;
+  }
+
+  &__event1-descr {
+    max-width: 370px;
+    padding-top: 31px;
+  }
+
+  &__event1-exhdate {
+    display: flex;
+    align-items: center;
+  }
+
+  &__event1-exh {
+    @extend %font-I500;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #687480;
+    padding-right: 26px;
+  }
+
+  &__event1-date {
+    @extend %font-I700;
+    font-size: 14px;
+    color: #1a5a4c;
+  }
+
+  &__name-square {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__event1-name {
+    @extend %font-M400;
+    font-size: 36px;
+    color: #0f0e08;
+    margin: 15px 0;
+  }
+
+  &__red-square {
+    width: 15px;
+    height: 15px;
+    background-color: #f14a27;
+  }
+
+  &__event1-text {
+    @extend %font-I300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
+  }
+
+  &__event2 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+  }
+
+  &__right2 {
+    width: 670px;
+    height: 520px;
+  }
+
+  &__image2 {
+    object-fit: contain;
+  }
+
+  &__event2-descr {
+    max-width: 370px;
+    padding-top: 31px;
+  }
+
+  &__event2-exhdate {
+    display: flex;
+    align-items: center;
+  }
+
+  &__event2-exh {
+    @extend %font-I500;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #687480;
+    padding-right: 26px;
+  }
+
+  &__event2-date {
+    @extend %font-I700;
+    font-size: 14px;
+    color: #1a5a4c;
+  }
+
+  &__event2-name {
+    @extend %font-M400;
+    font-size: 36px;
+    color: #0f0e08;
+    margin: 15px 0;
+  }
+
+  &__event2-text {
+    @extend %font-I300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #4e4e4e;
   }
 }
