--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,4 +1,9 @@
-.page--container {
+.page {
   margin-left: 55px;
-  height: 655px;
+}
+
+.container {
+  margin: 0 55px;
+  // height: 655px;
+  // width: 1225px;
 }
