--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,38 +1,64 @@
-.header {
-  &__image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-image: url("../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 100%;
-    width: 725px;
-  }
+.html {
+  position: relative;
+}
 
-  &__name {
-    position: absolute;
-    top: 235px;
-    left: 255px;
+.header {
+
+  &__sidebar {
+    display: grid;
+    grid-template-columns: minmax(300px, 500px) 1fr;
+    height: 655px;
+  }
+}
+
+.block {
+  position: absolute;
+  top: 235px;
+  left: -300px;
+}
+
+.menu-image {
+  position: relative;
+  display: block;
+  background-image: url("../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  z-index: -1;
+
+  &__text {
     font-family: $montserratFontFamily;
     font-size: 72px;
     line-height: 100%;
-    font-weight: bold;
+    font-weight: 700;
+
+    & span {
+      -webkit-text-stroke: 2px #000;
+      color: transparent;
+    }
   }
 }
 
 .nav {
+  margin-top: 39px;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
 
   &__toggler {
     display: none;
   }
   
+  &__logo {
+    position: absolute;
+    left: calc(50% - 62px / 2);
+    font-size: 36px;
+    font-family: $montserratFontFamily;
+    font-weight: bold;
+    line-height: 100%;
+  }
 }
 
 .label {
-  position: absolute;
   box-sizing: content-box;
   display: flex;
   flex-direction: column;
@@ -52,13 +78,31 @@
   }
 }
 
-.namu {
-  position: absolute;
-  top: 15px;
-  left: calc(50% - (68px / 2));
-  width: 68px;
-  font-size: 36px;
-  font-family: $montserratFontFamily;
-  font-weight: bold;
-  line-height: 100%;
+.events {
+  display: flex;
+  width: 220px;
+  margin-top: 80px;
+  height: 70px;
+  font-size: 16px;
+  border: 1px solid #1a5a4c;
+
+  &__option {
+    width: 150px;
+    font-weight: 500;
+    text-align: center;
+    line-height: 70px;
+  }
+
+  &__button {
+    width: 70px;
+    background: #1a5a4c;
+
+  }
+
+}
+
+.option__text {
+  font-family: $plexSansFontFamily;
+  
+  font-weight: 500;
 }
