almost full page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,13 @@
-@import "reset";
+@import "./header/reset";
 @import "utils";
-@import "../fonts";
-@import "header";
-@import "page";
+@import "./fonts";
+@import "./header/header";
+@import "./header/page";
+@import "./mainContent/events";
+@import "./galery/galeryTop.scss";
+@import "./galery/galeryBottom.scss";
+@import "./footer/footerTop.scss";
+@import "./footer/footerBottom.scss";
 
 body {
   background: #fff;
