--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,16 +7,16 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 68%;
+    width: 40%;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     z-index: 1;
   }
 
   &__menu {
     position: absolute;
     top: 45px;
-    left: 58px;
+    left: 178px;
     cursor: pointer;
   }
 
@@ -28,7 +28,7 @@
   }
 
   &__center {
-    width: 460px;
+    width: 300px;
   }
 
   &__name {
@@ -39,12 +39,6 @@
     text-transform: uppercase;
     letter-spacing: 0;
     line-height: 100%;
-  }
-
-  &__transparent-letters {
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
   }
 
   &__button {
@@ -70,14 +64,43 @@
     right: 0;
     color: #d7dde3;
     width: 60px;
-    height: 59px;
+    height: 58px;
     background-color: #1a5a4c;
+  }
+
+  &__button:hover {
+    border: 2px solid #1a5a4c;
   }
 
   &__rightside {
     width: 60%;
     position: absolute;
     right: 0;
+  }
+
+  &__logo {
+    @extend %font-M700;
+    font-size: 36px;
+    text-transform: uppercase;
+    width: 68px;
+    position: absolute;
+    top: 15px;
+    left: 51px;
+  }
+
+  &__transparent-letters {
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    position: absolute;
+    top: 226px;
+    left: 1px;
+    @extend %font-M700;
+    color: #000;
+    font-size: 72px;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    line-height: 100%;
   }
 
   &__image {
