--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,196 +1,13 @@
 @import "utils/placeholders";
 @import "header";
+@import "events";
+@import "gallery";
+@import "subscribe";
+@import "footer";
+@import "media";
 
 body {
   margin: 0;
   background-color: #fff;
-}
-
-.main {
-  padding: 0 55px;
-}
-
-.event {
-
-  &__heading {
-    @extend %font-M700;
-    font-size: 48px;
-    color: #0f0e08;
-    padding: 30px 0;
-    display: block;
-  }
-
-  &__event1 {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
-  }
-
-  &__left1 {
-    width: 670px;
-    height: 520px;
-  }
-
-  &__image1 {
-    object-fit: contain;
-  }
-
-  &__event1-descr {
-    max-width: 370px;
-    padding-top: 31px;
-  }
-
-  &__event1-exhdate {
-    display: flex;
-    align-items: center;
-  }
-
-  &__event1-exh {
-    @extend %font-I500;
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #687480;
-    padding-right: 26px;
-  }
-
-  &__event1-date {
-    @extend %font-I700;
-    font-size: 14px;
-    color: #1a5a4c;
-  }
-
-  &__name-square {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  &__event1-name {
-    @extend %font-M400;
-    font-size: 36px;
-    color: #0f0e08;
-    margin: 15px 0;
-  }
-
-  &__red-square {
-    width: 15px;
-    height: 15px;
-    background-color: #f14a27;
-  }
-
-  &__event1-text {
-    @extend %font-I300;
-    font-size: 16px;
-    line-height: 150%;
-    color: #4e4e4e;
-  }
-
-  &__event2 {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
-  }
-
-  &__right2 {
-    width: 670px;
-    height: 520px;
-  }
-
-  &__image2 {
-    object-fit: contain;
-  }
-
-  &__event2-descr {
-    max-width: 370px;
-    padding-top: 31px;
-  }
-
-  &__event2-exhdate {
-    display: flex;
-    align-items: center;
-  }
-
-  &__event2-exh {
-    @extend %font-I500;
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #687480;
-    padding-right: 26px;
-  }
-
-  &__event2-date {
-    @extend %font-I700;
-    font-size: 14px;
-    color: #1a5a4c;
-  }
-
-  &__event2-name {
-    @extend %font-M400;
-    font-size: 36px;
-    color: #0f0e08;
-    margin: 15px 0;
-  }
-
-  &__event2-text {
-    @extend %font-I300;
-    font-size: 16px;
-    line-height: 150%;
-    color: #4e4e4e;
-  }
-
-  &__event3 {
-    position: relative;
-    margin: 0 -55px;
-    display: flex;
-    justify-content: center;
-  }
-
-  &__image3 {
-    width: 100%;
-    position: absolute;
-    height: 550px;
-    left: 0;
-  }
-
-  &__event3-descr {
-    display: flex;
-    position: absolute;
-    top: 448px;
-    flex-direction: column;
-    z-index: 1;
-    background-color: #fff;
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-    padding: 45px 100px 50px;
-  }
-
-  &__event3-exhdate {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 340px;
-  }
-
-  &__event3-exh {
-    @extend %font-I500;
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #687480;
-    padding-right: 26px;
-  }
-
-  &__event3-date {
-    @extend %font-I700;
-    font-size: 14px;
-    color: #1a5a4c;
-  }
-
-  &__event3-name {
-    @extend %font-M400;
-    font-size: 36px;
-    color: #0f0e08;
-    margin: 0%;
-    max-width: 370px;
-    line-height: 100%;
-  }
-
+  box-sizing: border-box;
 }
