first section adaptiv

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -12,4 +12,9 @@
     height: 24px;
     background: url("../images/icon/arrow_button.svg") no-repeat center;
   }
+
+  @media (min-width: 768px) {
+    width: 70px;
+    height: 70px;
+  }
 }
