--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,12 +1,15 @@
 .header {
-  
   &__logo {
     position: absolute;
     top: 9px;
     right: calc(50% - #{$logo-small-width / 2});
     z-index: 2;
 
-    &.active {
+    @media (min-width: 768px) {
+      top: 15px;
+    }
+
+    &--active {
       position: fixed;
     }
   }
