--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -1,6 +1,12 @@
 .logo {
   display: block;
   width: $logo-small-width;
-  height: $logo-height;
+  height: $logo-small-height;
   background: url("../images/logo.png") no-repeat center / contain;
+
+  @media (min-width: 768px) {
+    width: $logo-width;
+    height: $logo-height;
+    background-image: url("../images/logo-large.png");
+  }
 }
