--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -5,10 +5,21 @@
     left: 23px;
     z-index: 2;
 
-    &.active {
+    &--active {
       position: fixed;
     }
+
+    @media (min-width: 768px) {
+      top: 39px;
+      left: 34px;
+    }
+
+    @media (min-width: 1024px) {
+      top: 39px;
+      left: 55px;
+    }
   }
+
   &__burger {
     display: block;
     height: 24px;
@@ -16,12 +27,12 @@
     position: relative;
     cursor: pointer;
 
-    &.active::before {
+    &--active::before {
       transform: rotate(-45deg);
       top: 5px;
     }
 
-    &.active::after {
+    &--active::after {
       transform: rotate(45deg);
       bottom: 5px;
     }
@@ -38,7 +49,7 @@
     margin: auto;
     transition: transform 0.3s;
 
-    &.active {
+    &--active {
       transform: scale(0);
     }
   }
@@ -73,7 +84,7 @@
     background-color: white;
     transition: all 0.3s ;
 
-    &.active {
+    &--active {
       position: fixed;
       top: 0;
       z-index: 1;
