--- a/src/styles/_promo-button.scss
+++ b/src/styles/_promo-button.scss
@@ -10,6 +10,11 @@
     color: $color-main;
     text-transform: uppercase;
     border: 1px solid #1a5a4c;
-  }
 
+    @media (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
