--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,9 @@
 $c-gray: #eee;
 $line-height: 2px;
 $logo-small-width: 55px;
-$logo-height: 61px;
+$logo-small-height: 61px;
+$logo-width: 68px;
+$logo-height: 72px;
 $width-event-content: 1170px;
 $color-item: #687480;
 $color-active: #1a5a4c;
