--- a/src/styles/_promo.scss
+++ b/src/styles/_promo.scss
@@ -1,18 +1,88 @@
 .promo {
+  @media (min-width: 768px) {
+    padding-left: calc(100% - 734px);
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 90px;
+  }
+
+  @media (min-width: 1024px) {
+    padding-left: calc(100% - 1024px);
+    margin-bottom: 100px;
+  }
+
+  @media (min-width: 1368px) {
+    padding-left: calc(100% - 1280px);
+  }
+
+  @media (min-width: 1801px) {
+    padding-left: calc(100% - 1544px);
+  }
+
+  &__image-wrapper {
+    flex-grow: 1;
+
+    @media (min-width: 1499px) {
+      // height: 100vh;
+      // height: 665px;
+    }
+  }
+
+  &__image {
+    display: block;
+    width: 100%;
+
+    @media (min-width: 768px) {
+      display: none;
+    }
+
+    @media (min-width: 1025px) {
+      display: block;
+    }
+
+    @media (min-width: 1368px) {
+      display: none;
+    }
+
+    &--large {
+      display: none;
+
+      @media (min-width: 1801px) {
+        display: block;
+      }
+    }
+
+    &--long {
+      display: none;
+
+      @media (min-width: 768px) and (max-width: 1024px) {
+        display: block;
+      }
+
+      @media (min-width: 1368px) and (max-width: 1800px) {
+        display: block;
+        max-height: 100%;
+      }
+    }
+  }
+
   &__heading {
     padding: 0 20px;
     margin-bottom: 70px;
-  }
 
-  // &__image-wrapper {
-  //   @media screen and (min-width: 500px) {
+    @media (min-width: 768px) {
+      position: relative;
+      top: 135px;
+      max-width: 231px;
+      padding: 0;
+      margin: 0;
+      height: max-content;
+    }
 
-  //   }
-  // }
-
-  &__image {
-    max-width: 100%;
-
+    @media (min-width: 1024px) {
+      top: 235px;
+      max-width: 300px;
+    }
   }
 
   &__title {
@@ -20,13 +90,37 @@
     margin: 20px auto;
     font-family: "Montserrat", sans-serif;
     font-size: 45px;
+    font-weight: 700;
     line-height: 1em;
     text-align: center;
     text-transform: uppercase;
+
+    @media (min-width: 768px) {
+      margin: 0 0 40px;
+      font-size: 55px;
+      text-align: start;
+    }
+
+    @media (min-width: 1024px) {
+      font-size: 72px;
+      margin-bottom: 80px;
+    }
+  }
+
+  &__transparent {
+    @media (min-width: 768px) {
+      color: transparent;
+      -webkit-text-stroke: 1px #0f0e08;
+    }
   }
 
   &__button-container {
     margin: 0 auto;
+
+    @media (min-width: 768px) {
+      margin: 0;
+      width: 220px;
+    }
   }
 
   &__link {
