--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -3,7 +3,7 @@
   margin-right: 150px;
 
   &__heading {
-    @extend %font-M700;
+    @include font-M700;
     font-size: 48px;
     color: #0f0e08;
     padding: 30px 0;
@@ -47,5 +47,10 @@
 
   &__button:hover {
     border: inset;
+  }
+
+  &__pointer-left,
+  &__pointer-right {
+    display: none;
   }
 }
