--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -16,7 +16,7 @@
   }
 
   &__name {
-    @extend %font-M700;
+    @include font-M700;
     font-size: 48px;
     color: #fff;
     display: block;
@@ -24,7 +24,7 @@
   }
 
   &__about {
-    @extend %font-I400;
+    @include font-I400;
     font-size: 18px;
     color: #fff;
     margin: 0;
@@ -42,7 +42,7 @@
   }
 
   ::placeholder {
-    @extend %font-M400;
+    @include font-M400;
     font-size: 14px;
     color: #687480;
   }
