--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,29 +1,29 @@
-%font-M400 {
+@mixin font-M400 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
 
-%font-M700 {
+@mixin font-M700 {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
 
-%font-I300 {
+@mixin font-I300 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 300;
 }
 
-%font-I400 {
+@mixin font-I400 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
 }
 
-%font-I500 {
+@mixin font-I500 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 500;
 }
 
-%font-I700 {
+@mixin font-I700 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 700;
 }
