--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -17,7 +17,7 @@
   }
 
   &__logo {
-    @extend %font-M700;
+    @include font-M700;
     font-size: 36px;
     text-transform: uppercase;
   }
@@ -35,13 +35,13 @@
 
   &__hours {
     width: 160px;
-    @extend %font-I400;
+    @include font-I400;
     font-size: 14px;
   }
 
   &__contacts {
     width: 177px;
-    @extend %font-I400;
+    @include font-I400;
     font-size: 14px;
   }
 
@@ -51,8 +51,9 @@
     justify-content: space-evenly;
   }
 
-  &__menu-block {
-    @extend %font-I400;
+  &__menu-blockleft,
+  &__menu-blockright {
+    @include font-I400;
     font-size: 14px;
   }
 }
@@ -61,7 +62,7 @@
   margin: 84px 150px 35px;
   display: flex;
   justify-content: space-between;
-  @extend %font-I300;
+  @include font-I300;
   font-size: 12px;
   color: #0f0e08;
 }
