--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,8 +1,10 @@
-@media screen and (max-width: 1724px) {
+@import "utils/mixins";
+
+@media screen and (max-width: 1887px) {
   .gallery {
     width: 1170px;
-    margin-left: 55px;
-    margin-right: 55px;
+    margin-left: auto;
+    margin-right: auto;
 
     &__photo:nth-child(3),
     &__photo:nth-child(6) {
@@ -40,5 +42,458 @@
 
   .design {
     margin: 84px 55px 35px;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .header {
+    height: 384px;
+    margin-left: 34px;
+
+    &__leftside {
+      justify-content: flex-end;
+      align-items: flex-end;
+      padding-bottom: 20px;
+    }
+
+    &__menu {
+      top: 45px;
+      left: 0;
+    }
+
+    &__center {
+      width: 230px;
+    }
+
+    &__name {
+      font-size: 55px;
+    }
+
+    &__transparent-letters {
+      top: 157px;
+      left: 1px;
+      font-size: 55px;
+    }
+
+    &__image {
+      height: 384px;
+    }
+  }
+
+  .event {
+    &__heading {
+      margin-left: 34px;
+      margin-right: 34px;
+    }
+
+    &__event1 {
+      display: block;
+      width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &__left1 {
+      width: 700px;
+      height: 520px;
+    }
+
+    &__event2 {
+      display: flex;
+      width: 700px;
+      flex-direction: column-reverse;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &__right2 {
+      width: 700px;
+      height: 520px;
+      margin-left: 0;
+    }
+
+    &__event3 {
+      height: 390px;
+    }
+
+    &__event3-descr {
+      top: 290px;
+    }
+  }
+
+  .gallery {
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+
+    &__pictures {
+      display: flex;
+      position: relative;
+    }
+
+    &__pointer-left {
+      position: absolute;
+      width: 48px;
+      height: 48px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      top: 247px;
+      left: 20px;
+      text-align: center;
+      line-height: 48px;
+      cursor: pointer;
+      display: block;
+    }
+
+    &__pointer-right {
+      position: absolute;
+      width: 48px;
+      height: 48px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      top: 247px;
+      right: 20px;
+      text-align: center;
+      line-height: 48px;
+      cursor: pointer;
+      display: block;
+    }
+
+    &__photo {
+      width: 340px;
+      height: 543px;
+    }
+
+    &__photo:first-child {
+      margin-right: 20px;
+    }
+
+    &__photo:nth-child(2) {
+      display: none;
+    }
+
+    &__photo:nth-child(4) {
+      display: none;
+    }
+
+    &__photo:nth-child(5) {
+      display: none;
+    }
+
+    &__photo:last-child {
+      display: none;
+    }
+
+    &__photo:nth-child(3) {
+      display: block;
+    }
+
+    &__photo:hover {
+      transform: none;
+    }
+
+    &__button {
+      display: none;
+    }
+
+    &__slider {
+      display: flex;
+      width: 102px;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
+
+    &__slider-dot {
+      width: 9px;
+      height: 9px;
+      border-radius: 50%;
+      background-color: #e0e0e0;
+    }
+
+    &__slider-dot:first-child {
+      background-color: #1a5a4c;
+    }
+  }
+
+  .subscribe {
+    #email {
+      width: 400px;
+    }
+  }
+
+  .footer {
+    flex-direction: column;
+    margin: 700px 34px 0;
+    justify-content: space-between;
+
+    &__leftside {
+      justify-content: space-between;
+      width: 100%;
+      border-right: none;
+      border-bottom: 1px solid rgba(26, 90, 76, 0.5);
+      padding-right: 0;
+      padding-bottom: 30px;
+    }
+
+    &__rightside {
+      width: 100%;
+      justify-content: space-evenly;
+      margin-top: 30px;
+    }
+
+    &__menu-blockleft {
+      padding-left: 100px;
+    }
+
+    &__menu-blockright {
+      padding-left: 65px;
+    }
+  }
+
+  .design {
+    margin: 84px 34px 35px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    height: 600px;
+    position: relative;
+    flex-direction: column-reverse;
+
+    &__leftside {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      height: 200px;
+    }
+
+    &__menu {
+      top: -280px;
+      left: 50px;
+    }
+
+    &__menu-stripe {
+      width: 20px;
+      height: 3px;
+      margin: 3px 0;
+    }
+
+    &__center {
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__name {
+      display: none;
+    }
+
+    &__name2 {
+      display: block;
+    }
+
+    &__button {
+      width: 260px;
+      height: 50px;
+      @include font-I500;
+      line-height: 50px;
+    }
+
+    &__button::after {
+      height: 48px;
+    }
+
+    &__rightside {
+      width: 100%;
+      height: 300px;
+      position: relative;
+    }
+
+    &__logo {
+      display: none;
+    }
+
+    &__transparent-letters {
+      display: none;
+    }
+
+    &__image {
+      position: absolute;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      object-position: bottom;
+    }
+  }
+
+  .event {
+    position: relative;
+    width: 100%;
+
+    &__heading {
+      font-size: 36px;
+      margin-left: 20px;
+      margin-right: 20px;
+      text-align: center;
+    }
+
+    &__event1 {
+      margin-left: auto;
+      margin-right: auto;
+      width: 280px;
+    }
+
+    &__left1 {
+      width: 280px;
+      height: 210px;
+      margin: 0 auto;
+    }
+
+    &__event1-descr {
+      width: 280px;
+      padding-top: 31px;
+      margin: 0 auto;
+    }
+
+    &__event1-exh {
+      font-size: 16px;
+    }
+
+    &__event1-date {
+      font-size: 16px;
+    }
+
+    &__event1-name {
+      font-size: 28px;
+    }
+
+    &__event2 {
+      margin-left: auto;
+      margin-right: auto;
+      width: 280px;
+    }
+
+    &__right2 {
+      width: 280px;
+      height: 210px;
+      margin: 0 auto;
+    }
+
+    &__event2-descr {
+      width: 280px;
+      padding-top: 31px;
+      margin: 0 auto;
+    }
+
+    &__event2-exh {
+      font-size: 16px;
+    }
+
+    &__event2-date {
+      font-size: 16px;
+    }
+
+    &__event2-name {
+      font-size: 28px;
+    }
+
+    &__event3 {
+      height: 210px;
+    }
+
+    &__event3-descr {
+      height: 140px;
+      top: 140px;
+      padding: 25px;
+      text-align: center;
+      width: 280px;
+    }
+
+    &__event3-exh {
+      font-size: 16px;
+    }
+
+    &__event3-date {
+      font-size: 16px;
+      margin-right: -10px;
+    }
+
+    &__event3-name {
+      font-size: 27px;
+    }
+  }
+
+  .gallery {
+    margin-left: auto;
+    margin-right: auto;
+    width: 280px;
+
+    &__heading {
+      font-size: 36px;
+      text-align: center;
+    }
+
+    &__pointer-left {
+      top: 181px;
+      left: 5px;
+    }
+
+    &__pointer-right {
+      top: 181px;
+      right: 5px;
+    }
+
+    &__photo {
+      width: 280px;
+      height: 410px;
+    }
+
+    &__photo:nth-child(2) {
+      display: none;
+    }
+
+    &__photo:nth-child(4) {
+      display: none;
+    }
+
+    &__photo:nth-child(5) {
+      display: none;
+    }
+
+    &__photo:last-child {
+      display: none;
+    }
+
+    &__photo:nth-child(3) {
+      display: none;
+    }
+
+    &__photo:hover {
+      transform: none;
+    }
+
+    &__button {
+      display: none;
+    }
+
+    &__slider {
+      display: flex;
+      width: 102px;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
+
+    &__slider-dot {
+      width: 9px;
+      height: 9px;
+      border-radius: 50%;
+      background-color: #e0e0e0;
+    }
+
+    &__slider-dot:first-child {
+      background-color: #1a5a4c;
+    }
   }
 }
