2 section with full adaptiv

--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,22 +1,149 @@
 .event {
   padding: 0 20px;
+  margin-bottom: 70px;
+
+  @media (min-width: 768px) {
+    padding: 0 34px;
+    margin-bottom: 90px;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 0 55px;
+  }
+
+  @media (min-width: 1250px) {
+    text-align: start;
+  }
+
+  @media (min-width: 1801px) {
+    padding: 0 calc(50% - 1570px / 2);
+  }
+
+  &__link {
+    @extend %mark;
+
+    &--rotate {
+      display: none;
+      position: relative;
+      width: fit-content;
+      padding: 5px;
+      transform: rotate(-90deg);
+      transition: transform 1s ease;
+
+      &:hover {
+        transform: rotate(-90deg) translateX(30px);
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: calc(50% - #{1px / 2});
+        left: -90px;
+        width: 70px;
+        height: 1px;
+        background-color: #1a5a4c;
+      }
+
+      @media (min-width: 1250px) {
+        display: block;
+        position: absolute;
+        top: 522px;
+        left: 47px;
+      }
+
+      @media (min-width: 1368px) {
+        top: 580px;
+      }
+
+      @media (min-width: 1801px) {
+        top: 522px;
+        left: 175px;
+      }
+    }
+  }
+
+  &__block {
+    @media (min-width: 1250px) {
+      display: flex;
+    }
+
+    &--top {
+      margin-bottom: 50px;
+
+      @media (min-width: 1250px) {
+        margin-bottom: 60px;
+      }
+    }
+
+    &--bottom {
+      @media (min-width: 1250px) {
+        flex-direction: row-reverse;
+      }
+    }
+  }
 
   &__heading {
+    @extend %heading;
     margin-bottom: 40px;
-    text-align: center;
 
-    & ~ .event__block {
-      margin-bottom: 40px;
+    @media (min-width: 768px) {
+      font-size: 48px;
+      margin-bottom: 50px;
+    }
+
+    @media (min-width: 1250px) {
+      text-align: start;
+    }
+  }
+
+  &__scale {
+    overflow: hidden;
+    flex-grow: 1;
+
+    &--top {
+      @media (min-width: 1250px) {
+        margin-right: 130px;
+      }
+    }
+
+    &--bottom {
+      @media (min-width: 1250px) {
+        margin-left: 130px;
+      }
     }
   }
 
   &__image {
-    max-width: 100%;
+    display: block;
+    width: 100%;
     margin-bottom: 15px;
+    transition: transform 1s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @media (min-width: 768px) {
+      margin-bottom: 30px;
+    }
+
+    @media (min-width: 1250px) {
+      margin-bottom: 0;
+    }
   }
 
   &__info {
     max-width: 370px;
+
+    @media (min-width: 1250px) {
+      position: relative;
+      top: 50px;
+    }
+
+    @media (min-width: 1801px) {
+      position: static;
+      align-self: center;
+    }
   }
 
   &__date-container {
@@ -25,11 +152,11 @@
     align-items: center;
     flex-basis: 279px;
     margin-bottom: 10px;
-  }
 
-  &__mark {
-    @extend %mark;
-    margin-right: 26px;
+    @media (min-width: 768px) {
+      max-width: 229px;
+      margin-bottom: 30px;
+    }
   }
 
   &__date {
@@ -37,27 +164,27 @@
   }
 
   &__title {
-    width: 280px;
+    width: fit-content;
     height: 34px;
     @extend %title;
     margin-bottom: 10px;
     position: relative;
 
+    @media (min-width: 768px) {
+      font-size: 36px;
+      height: 39px;
+      margin-bottom: 15px;
+    }
+
     &::after {
       content: "";
-      position: absolute;
-      top: 50%;
-      bottom: 50%;
-      right: 5px;
-      transform: translate(-50%, -50%);
       display: block;
+      position: absolute;
+      top: calc(50% - #{10px / 2});
+      right: -10%;
       width: 10px;
       height: 10px;
       background-color: #f14a27;
-    }
-
-    &--near::after {
-      right: 40px;
     }
   }
 
@@ -65,9 +192,5 @@
     font-weight: 300;
     line-height: 1.2em;
     color: #4e4e4e;
-  }
-
-  &:nth-child(2) {
-    margin-bottom: 70px;
   }
 }
