--- a/src/styles/_promo.scss
+++ b/src/styles/_promo.scss
@@ -7,8 +7,12 @@
   }
 
   @media (min-width: 1024px) {
-    padding-left: calc(100% - 1024px);
+    padding-left: 55px;
     margin-bottom: 100px;
+  }
+
+  @media (min-width: 1250px) {
+    padding-left: calc(100% - 1025px);
   }
 
   @media (min-width: 1368px) {
@@ -22,10 +26,13 @@
   &__image-wrapper {
     flex-grow: 1;
 
-    @media (min-width: 1499px) {
-      // height: 100vh;
-      // height: 665px;
-    }
+    // @media (min-width: 1368px) {
+    //   height: 100vh;
+    // }
+
+    // @media (min-width: 1801px) {
+    //   height: auto;
+    // }
   }
 
   &__image {
@@ -36,7 +43,7 @@
       display: none;
     }
 
-    @media (min-width: 1025px) {
+    @media (min-width: 1024px) {
       display: block;
     }
 
@@ -55,7 +62,7 @@
     &--long {
       display: none;
 
-      @media (min-width: 768px) and (max-width: 1024px) {
+      @media (min-width: 768px) and (max-width: 1023px) {
         display: block;
       }
 
@@ -121,9 +128,5 @@
       margin: 0;
       width: 220px;
     }
-  }
-
-  &__link {
-    display: none;
   }
 }
