--- a/src/styles/_subscribe.scss
+++ b/src/styles/_subscribe.scss
@@ -10,9 +10,9 @@
   }
 
   &__heading {
+    @extend %heading;
     margin-top: 55px;
     margin-bottom: 30px;
-    text-align: center;
     color: #fff;
   }
 
