--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -24,6 +24,15 @@
   color: $color-active;
 }
 
+%heading {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1em;
+  color: $color-main;
+  text-align: center;
+}
+
 %title {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
