--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,7 +4,8 @@ $logo-small-width: 55px;
 $logo-small-height: 61px;
 $logo-width: 68px;
 $logo-height: 72px;
-$width-event-content: 1170px;
+$width-event-smallContent: 700px;
+$width-event-content: 914px;
 $color-item: #687480;
 $color-active: #1a5a4c;
 $color-main: #0f0e08;
