--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -2,11 +2,10 @@
   display: block;
   width: $logo-small-width;
   height: $logo-small-height;
-  background: url("../images/logo.png") no-repeat center / contain;
+  background: url("../images/logo-NAMU.svg") no-repeat center / contain;
 
   @media (min-width: 768px) {
     width: $logo-width;
     height: $logo-height;
-    background-image: url("../images/logo-large.png");
   }
 }
