--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -15,8 +15,11 @@
     }
 
     @media (min-width: 1024px) {
-      top: 39px;
       left: 55px;
+    }
+
+    @media (min-width: 1801px) {
+      left: 175px;
     }
   }
 
@@ -77,7 +80,8 @@
 
   &__nav-wrapper {
     position: absolute;
-    top: -100%;
+    overflow: auto;
+    top: -200%;
     left: 0;
     width: 100%;
     height: 100vh;
