--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -257,9 +257,10 @@
 
 @media screen and (max-width: 767px) {
   .header {
-    height: 600px;
+    height: 520px;
     position: relative;
     flex-direction: column-reverse;
+    margin-left: 0;
 
     &__leftside {
       width: 100%;
@@ -495,5 +496,25 @@
     &__slider-dot:first-child {
       background-color: #1a5a4c;
     }
+  }
+
+  .subscribe {
+    #email {
+      width: 260px;
+    }
+  }
+
+  .footer {
+    flex-direction: column;
+    margin: 700px 20px 0;
+    justify-content: space-between;
+
+    &__menu-blockleft {
+      padding-left: 50px;
+    }
+  }
+
+  .design {
+    margin: 84px 20px 35px;
   }
 }
